--- a/meal_management/templates/base.html
+++ b/meal_management/templates/base.html
@@ -13,10 +13,7 @@
         <ul class="navbar-nav ms-auto">
           {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="#">Hi, {{ user.username }}</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+              <a class="nav-link" href="#"><p>Welcome, {{ user.username }} | <a href="{% url 'logout' %}">Logout</a></p></a>
             </li>
           {% else %}
             <li class="nav-item">
