--- a/meal_management/templates/base.html
+++ b/meal_management/templates/base.html
@@ -11,9 +11,16 @@
       <a class="navbar-brand" href="#">Meal System</a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
+          <a href="{% url 'home' %}">Home</a>
           {% if user.is_authenticated %}
+          <a href="{% url 'student_dashboard' %}">Dashboard</a>
             <li class="nav-item">
-              <a class="nav-link" href="#"><p>Welcome, {{ user.username }} | <a href="{% url 'logout' %}">Logout</a></p></a>
+              <a class="nav-link" href="#"><p>Welcome, {{ user.username }} |
+                  <form method="post" action="{% url 'logout' %}">
+                    {% csrf_token %}
+                    <button type="submit">Logout</button>
+                  </form>
+              </p></a>
             </li>
           {% else %}
             <li class="nav-item">
