students app views, models updated

--- a/meal_management/students/templates/students/change_meal_type.html
+++ b/meal_management/students/templates/students/change_meal_type.html
@@ -3,11 +3,35 @@
 {% block content %}
     <div class="container mt-4">
         <h3>Change Meal Type for Next Month</h3>
+
+
+    {% if messages %}
+        {% for message in messages %}
+            {% if message.tags == 'error' %}
+                <p style="color: red">{{ message }}</p>
+            {% else %}
+                <p style="color: green">{{ message }}</p>
+            {% endif %}
+
+        {% endfor %}
+    {% endif %}
+
+
+        <p>Note:You can change next month's meal type until: <strong>{{ cutoff_time|date:"F j, Y, g:i A" }}</strong></p>
+
+        <p style="color: #d9534f;">
+            ⚠ If you do not change your meal type before the deadline, your 
+            <strong>default meal type ({{ request.user.student.default_meal_type.name }})</strong> 
+            will be used for next month.
+        </p>
+
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
             <button class="btn btn-primary" type="submit">Update Meal Type</button>
         </form>
-        <p>Note: You can only change until {{ cutoff_time|date:"F j, Y, g:i A"}}</p>
+        
+   <a href="{% url 'student_dashboard' %}">Back to Dashboard</a>
+
     </div>
 {% endblock %}
